Fix monaco editor and splitter layout issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,7 @@
 
         .monaco-editor {
           height: 300px !important;
+          width: 100% !important;
         }
       }
     }
